# cliue

./: Cargo.toml  readme.md
cliue-core/: Cargo.toml
cliue-core/src/: lib.rs  oauth.rs  task.rs
cliue-gui/: Cargo.toml
cliue-gui/src/: config.rs  main.rs  theme.rs
cliue-gui/src/view/: login.rs  mod.rs
