[package]
name = "cliue-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", default-features = false, features = [
  "tokio",
  "wgpu",
] }
tokio = { version = "*", features = ["fs"] }
cliue-core = { version = "*", path = "../cliue-core" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
directories = "5.0"
anyhow = "1.0"
dark-light = "*"
